# NIST-developed software is provided by NIST as a public service. You may use,
# copy and distribute copies of the software in any medium, provided that you
# keep intact this entire notice. You may improve,modify and create derivative
# works of the software or any portion of the software, and you may copy and
# distribute such modifications or works. Modified works should carry a notice
# stating that you changed the software and should note the date and nature of
# any such change. Please explicitly acknowledge the National Institute of
# Standards and Technology as the source of the software.
#
# NIST-developed software is expressly provided "AS IS." NIST MAKES NO
# WARRANTY OF ANY KIND, EXPRESS, IMPLIED, IN FACT OR ARISING BY OPERATION OF
# LAW, INCLUDING, WITHOUT LIMITATION, THE IMPLIED WARRANTY OF
# MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE, NON-INFRINGEMENT
# AND DATA ACCURACY. NIST NEITHER REPRESENTS NOR WARRANTS THAT THE
# OPERATION OF THE SOFTWARE WILL BE UNINTERRUPTED OR ERROR-FREE, OR THAT
# ANY DEFECTS WILL BE CORRECTED. NIST DOES NOT WARRANT OR MAKE ANY
# REPRESENTATIONS REGARDING THE USE OF THE SOFTWARE OR THE RESULTS THEREOF,
# INCLUDING BUT NOT LIMITED TO THE CORRECTNESS, ACCURACY, RELIABILITY,
# OR USEFULNESS OF THE SOFTWARE.
#
# You are solely responsible for determining the appropriateness of using and
# distributing the software and you assume all risks associated with its use,
# including but not limited to the risks and costs of program errors,
# compliance with applicable laws, damage to or loss of data, programs or
# equipment, and the unavailability or interruption of operation. This
# software is not intended to be used in any situation where a failure could
# cause risk of injury or damage to property. The software developed by NIST
# employees is not subject to copyright protection within the United States.
#
# Author: Evan Black <evan.black@nist.gov>

# Be sure to set OSG_ROOT & OSG_DIR if OpenSceneGraph is not installed on your system
# OSG_ROOT for the includes
# OSG_DIR For the library code
#
# OSG_ROOT = ${PROJECT_SOURCE_DIR}/lib/OpenSceneGraph
# OSG_DIR = ${PROJECT_SOURCE_DIR}/lib/OpenSceneGraph/build/
find_package(OpenSceneGraph REQUIRED COMPONENTS osgViewer osgDB osgGA osgText osgUtil)

find_package(LibXml2 REQUIRED)

set(CMAKE_INCLUDE_CURRENT_DIR ON)
find_package(Qt5 COMPONENTS Core Widgets OpenGL Charts REQUIRED)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_AUTOUIC ON)

add_executable(visualization
        main.cpp
        event/model.h
        group/node/NodeGroup.cpp group/node/NodeGroup.h
        group/building/BuildingGroup.cpp group/building/BuildingGroup.h
        group/decoration/DecorationGroup.cpp group/decoration/DecorationGroup.h
        parser/file-parser.cpp parser/file-parser.h
        parser/model.h
        util/CoordinateGrid.cpp util/CoordinateGrid.h
        util/PauseHandler.cpp util/PauseHandler.h
        util/GroundPlane.cpp util/GroundPlane.h
        window/mainWindow.cpp window/mainWindow.h window/mainWindow.ui
        window/osgWidget.cpp window/osgWidget.h
        window/chart/ChartManager.cpp window/chart/ChartManager.h window/chart/chartManager.ui)

target_compile_features(visualization PRIVATE cxx_std_17)

target_compile_options(visualization PRIVATE -Wall -Wextra -Wpedantic -pedantic-errors)

# Use SYSTEM with libraries to suppress warnings
# generated by their headers
target_include_directories(visualization SYSTEM PRIVATE ${OPENSCENEGRAPH_INCLUDE_DIRS})
target_link_libraries(visualization ${OPENSCENEGRAPH_LIBRARIES})

target_link_libraries(visualization json)

target_link_libraries(visualization Qt5::Core Qt5::Widgets Qt5::OpenGL Qt5::Charts)
